used singleton pattern for experiment collection class and fixed some incorrect type assumptions